# ly-factmesh

./: .gitignore  CODEOWNERS  LICENSE  README.md  build.gradle  docker-compose-pgsql.yml  docker-compose.yml  execute-sql-scripts.ps1  gradle.properties  settings.gradle
docs/: CONTRIBUTING.md  DDD_ARCHITECTURE_OVERVIEW.md  DOCKER_README.md  ENTERPRISE_MOM_DEVELOPMENT_PLAN.md  GITHUB_PUSH_GUIDE.md  GIT_COMMIT_ENCODING.md  Github Config.md  MOM_MENU_STRUCTURE.md  PROJECT_DESIGN.md  README.md  SYSTEM_DEVELOPMENT_PLAN.md  knife4j-integration.md
mom-admin/: Dockerfile  build.gradle
mom-ai/: Dockerfile  README.md  ai_core.py  factmesh_ai_model.pth  grpc_servicer.py  main.py  requirements.txt
mom-common/: build.gradle
mom-gateway/: Dockerfile  build.gradle
mom-infra/: build.gradle
mom-iot/: DDD_ARCHITECTURE.md  Dockerfile  build.gradle
mom-mes/: Dockerfile  build.gradle
mom-ops/: Dockerfile  build.gradle
mom-qms/: Dockerfile  build.gradle
mom-simulator/: build.gradle
mom-wms/: Dockerfile  build.gradle
nacos-config/: application.properties
scripts/: commit-and-push.ps1  git-commit-and-push.ps1  new-commit-msg.txt  rebase-msg-editor.cmd  rebase-msg-editor.ps1  rebase-seq-editor.cmd  rebase-seq-editor.ps1  setup-git-encoding.ps1
sql/: ly_factmesh_common.sql  ly_factmesh_iot.sql  ly_factmesh_mes.sql  ly_factmesh_mes_add_production_line.sql  ly_factmesh_qms.sql  ly_factmesh_wms.sql  nacos-all-init.sql
tools/: README.md  docker-compose-base.yml  start-env.bat  (+4 more)
tools/edge-box/c/: CMakeLists.txt  README.md
tools/edge-box/c/src/: config.h  main.c
(+564 files in other folders)
